Editor Slide animation: change layout (not correctly aligned)

--- a/app/globals.css
+++ b/app/globals.css
@@ -109,7 +109,7 @@ html {
     left: 0;
     right: 0;
     top: 48px; /* Position underline at the bottom of the element */
-    height: 1px; /* Adjust the height of the underline */
+    height: 2px; /* Adjust the height of the underline */
     background-image: linear-gradient(
       45deg,
       #e0fffb 0%,
